Update feilire.html - trying to debug time

--- a/feilire.html
+++ b/feilire.html
@@ -227,6 +227,7 @@ function renderTable(rows, levels = [], ages = [], areas = []) {
     (a,b) => parseEventDateTime(a) - parseEventDateTime(b)
   );
 
+  console.log(row["Am an imeachta"], normalizeTime(row["Am an imeachta"]));
   sortedRows.forEach(row => {
 
     if (!row.Approved || row.Approved.toString().toLowerCase().trim() !== "true") return;
