--- a/feilire.html
+++ b/feilire.html
@@ -142,7 +142,7 @@
       <th>Teideal</th>
       <th>Am</th>
       <th>Seoladh</th>
-      <th>Tuilleadh eolais</th>
+      <th>Tuilleadh Eolais</th>
     </tr>
   </thead>
   <tbody></tbody>
